--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "node-cron": "^2.0.3",
     "socket.io": "^2.3.0",
     "uid": "^1.0.0"
   },
