--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.1",
+    "jszip": "^3.5.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
