--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "jszip": "^3.5.0",
     "lodash": "^4.17.15",
+    "mime-types": "^2.1.27",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
